// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppBar Basic display 1`] = `
.c5 {
  color: black;
  cursor: pointer;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  min-height: calc(32px * 2);
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 {
  margin: calc(8px * 2) 1rem calc(8px * 2) 1rem;
}

.c3 {
  color: black;
  cursor: pointer;
}

.c3 > * {
  height: calc(32px * 2);
}

.c4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin: calc(32px * 1) 1rem calc(32px * 1) 1rem;
}

<nav
  className="c0"
>
  <div
    className="c1"
  >
    <span
      className="c2"
    >
      <a
        className="c3"
        href="/"
        onClick={[Function]}
      >
        some brand
      </a>
    </span>
  </div>
  <div
    className="c1"
  >
    <span
      className="c4"
    >
      <a
        className="c5"
        href="/login"
        onClick={[Function]}
      >
        Login
      </a>
    </span>
  </div>
</nav>
`;

exports[`AppBar With admin user 1`] = `
.c5 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: calc(8px / 2);
}

.c5 svg {
  stroke: black;
  width: calc(2 * 8px);
  height: calc(2 * 8px);
}

.c6 {
  color: black;
  cursor: pointer;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  min-height: calc(32px * 2);
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 {
  margin: calc(8px * 2) 1rem calc(8px * 2) 1rem;
}

.c3 {
  color: black;
  cursor: pointer;
}

.c3 > * {
  height: calc(32px * 2);
}

.c4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin: calc(32px * 1) 1rem calc(32px * 1) 1rem;
}

<nav
  className="c0"
>
  <div
    className="c1"
  >
    <span
      className="c2"
    >
      <a
        className="c3"
        href="/"
        onClick={[Function]}
      >
        some brand
      </a>
    </span>
  </div>
  <div
    className="c1"
  >
    <span
      className="c4"
    >
      <span
        className="c5"
        color="black"
        size={2}
      >
        <svg
          fill="none"
          height={undefined}
          stroke={undefined}
          strokeLinecap="round"
          strokeLinejoin="round"
          strokeWidth="2"
          viewBox="0 0 24 24"
          width={undefined}
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2"
          />
          <circle
            cx="12"
            cy="7"
            r="4"
          />
        </svg>
      </span>
      some user
       (admin)
    </span>
    <span
      className="c4"
    >
      <a
        className="c6"
        href="#"
        onClick={[Function]}
      >
        <span
          className="c5"
          color="black"
          size={2}
        >
          <svg
            fill="none"
            height={undefined}
            stroke={undefined}
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="2"
            viewBox="0 0 24 24"
            width={undefined}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M18.36 6.64a9 9 0 1 1-12.73 0"
            />
            <line
              x1="12"
              x2="12"
              y1="2"
              y2="12"
            />
          </svg>
        </span>
        Logout
      </a>
    </span>
  </div>
</nav>
`;

exports[`AppBar With custom brand and login links 1`] = `
.c5 {
  color: black;
  cursor: pointer;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  min-height: calc(32px * 2);
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 {
  margin: calc(8px * 2) 1rem calc(8px * 2) 1rem;
}

.c3 {
  color: black;
  cursor: pointer;
}

.c3 > * {
  height: calc(32px * 2);
}

.c4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin: calc(32px * 1) 1rem calc(32px * 1) 1rem;
}

<nav
  className="c0"
>
  <div
    className="c1"
  >
    <span
      className="c2"
    >
      <a
        className="c3"
        href="/home"
        onClick={[Function]}
      >
        some brand
      </a>
    </span>
  </div>
  <div
    className="c1"
  >
    <span
      className="c4"
    >
      <a
        className="c5"
        href="/signin"
        onClick={[Function]}
      >
        Login
      </a>
    </span>
  </div>
</nav>
`;

exports[`AppBar With custom right component 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  min-height: calc(32px * 2);
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 {
  margin: calc(8px * 2) 1rem calc(8px * 2) 1rem;
}

.c3 {
  color: black;
  cursor: pointer;
}

.c3 > * {
  height: calc(32px * 2);
}

<nav
  className="c0"
>
  <div
    className="c1"
  >
    <span
      className="c2"
    >
      <a
        className="c3"
        href="/"
        onClick={[Function]}
      >
        some brand
      </a>
    </span>
  </div>
  <div>
    userName
  </div>
</nav>
`;

exports[`AppBar With nav links 1`] = `
.c5 {
  color: black;
  cursor: pointer;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  min-height: calc(32px * 2);
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 {
  margin: calc(8px * 2) 1rem calc(8px * 2) 1rem;
}

.c3 {
  color: black;
  cursor: pointer;
}

.c3 > * {
  height: calc(32px * 2);
}

.c4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin: calc(32px * 1) 1rem calc(32px * 1) 1rem;
}

<nav
  className="c0"
>
  <div
    className="c1"
  >
    <span
      className="c2"
    >
      <a
        className="c3"
        href="/"
        onClick={[Function]}
      >
        some brand
      </a>
    </span>
  </div>
  <div
    className="c1"
  >
    <span
      className="c4"
    >
      <a
        className="c5"
        href="/login"
        onClick={[Function]}
      >
        Login
      </a>
    </span>
  </div>
</nav>
`;
